Update Basic Leaflet Map.html

--- a/Basic Leaflet Map.html
+++ b/Basic Leaflet Map.html
@@ -55,5 +55,6 @@ var myPolygon = L.polygon([
 ],{
 color: 'red',
 fillColor: '#f03',
-
+fillOpacity: 0.5
+}).addTo(mymap).bindPopup("I am a polygon.");
 
