--- a/new1.html
+++ b/new1.html
@@ -9,7 +9,7 @@
 	   integrity='"sha512-mNqn2Wg7tSToJhvHcqfzLMU6J4mkOImSPTxVZAdo+lcPlk+GhZmYgACEe0x35K7YzW1zJ7XyJV/TT1MrdXvMcA=='
        crossorigin=""></script>
 	   
-	   <!the following CSS is used to set the size of the Map>
+	   <!--the following CSS is used to set the size of the Map-->
 	   <style type="text/css">
 	                      #mapid {height:180px;}
 	   </style>
