--- a/new1.html
+++ b/new1.html
@@ -37,12 +37,12 @@
 	   // add a circle
 	   L.circle([51.508,-0.11],500,{
 	   color:'red'
-	   fillColor:'#ffcccc',
+	   fillcolor:'#f03',
 	   fillOpacity:0.5
 	   }).addTo(mymap).bindPopup('I am a circle.');
 	   // add a polygon with 3 end points (i.e. a triangle)
 	   var myPolygon=L.polygon([[51.509,-0.08],[51.503,-0.06],[51.51,-0.047]],
-	   {color:'red',fillColor:'#ffcccc',fillOpacity:0.5}).addTo(mymap).bindPopup('I am a polygon');
+	   {color:'red',fillcolor:'#f03',fillOpacity:0.5}).addTo(mymap).bindPopup('I am a polygon');
 	   </script>
 </body>
 </html>	   
