--- a/new1.html
+++ b/new1.html
@@ -36,8 +36,8 @@
 	   L.marker([51.5,-0.09]).addTo(mymap).bindPopup('<b>Hello world!</b><br />I am a popup.').openPopup();
 	   // add a circle
 	   L.circle([51.508,-0.11],500,{
-	   color:'red'
-	   fillColor:"#f03",
+	   color:'red',
+	   fillColor:'#f03',
 	   fillOpacity:0.5
 	   }).addTo(mymap).bindPopup('I am a circle.');
 	   // add a polygon with 3 end points (i.e. a triangle)
