--- a/new3.html
+++ b/new3.html
@@ -15,8 +15,8 @@
 	   </style>
 	   
 	   <!-- the following links incorporate the CSS required for the custom icon creation---->
-	   <link rel='stylesheet' href='iconicons.min.css'>
-	   <link rel='stylesheet' href='leaflet.awesome-markers.css'>
+	   <link href='iconicons.min.css'>
+	   <link href='leaflet.awesome-markers.css'>
 	   <script crs='="leaflet.awesome-markers.js'></script>
 <head>
 
