--- a/new3.html
+++ b/new3.html
@@ -38,9 +38,7 @@
 	   id:'mapbox.streets'
 	   }).addTo(mymap);
 	   
-	   var testMarkerPink=L.AwesomeMarkers.icon({
-	   icon:'play',
-	   markerColor:'pink'});
+	   var testMarkerPink=L.AwesomeMarkers.icon({icon:'play',markerColor:'pink'});
 	   
 	   // create a geoJSON feature - 
 	   var geojsonFeature = {
