--- a/new3.html
+++ b/new3.html
@@ -38,10 +38,10 @@
 	   id:'mapbox.streets'
 	   }).addTo(mymap);
 	   
-	   var testMarkerPink = L.AwesomeMarkers.icon{
+	   var testMarkerPink = L.AwesomeMarkers.icon({
        icon: 'play',
        markerColor: 'pink'
-       };
+       });
 	   
 	   // create a geoJSON feature - 
 	   var geojsonFeature = {
