--- a/new3.html
+++ b/new3.html
@@ -38,7 +38,7 @@
 	   id:'mapbox.streets'
 	   }).addTo(mymap);
 	   
-	   var testMarkerPink = L.AwesomeMarkers.icon({
+	   var testMarkerPink = L.awesome-markers.icon({
        icon: 'play',
        markerColor: 'pink'
        });
