--- a/new3.html
+++ b/new3.html
@@ -17,7 +17,7 @@
 	   <!-- the following links incorporate the CSS required for the custom icon creation---->
 	   <link href='iconicons.min.css'>
 	   <link href='leaflet.awesome-markers.css'>
-	   <script crs='="leaflet.awesome-markers.js'></script>
+	   <script crs='leaflet.awesome-markers.js'></script>
 <head>
 
 #to write the body here 
@@ -38,7 +38,7 @@
 	   id:'mapbox.streets'
 	   }).addTo(mymap);
 	   
-	   var testMarkerPink = L.awesome-markers.icon({
+	   var testMarkerPink = L.AwesomeMarkers.icon({
        icon: 'play',
        markerColor: 'pink'
        });
