--- a/new3.html
+++ b/new3.html
@@ -39,8 +39,8 @@
 	   id:'mapbox.streets'
 	   }).addTo(mymap);
 	   
-	   var testMarkerPink = L.AwesomeMarkers.icon({
-       icon: 'play',
+	   var testMarkerPink = L.AwesomeMarkers.iconicons({
+       iconicons: 'play',
        markerColor: 'pink'
        });
 	   
