--- a/new3.html
+++ b/new3.html
@@ -15,7 +15,7 @@
 	   </style>
 	   
 	   <!-- the following links incorporate the CSS required for the custom icon creation---->
-	   <link href='http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css'>
+	   <link href='ionicons.min.css'>
 	   <link href='leaflet.awesome-markers.css'>
 	   <script crs='leaflet.awesome-markers.js'></script>
 <head>
