--- a/new3.html
+++ b/new3.html
@@ -17,7 +17,7 @@
 	   <!-- the following links incorporate the CSS required for the custom icon creation---->
 	   <link href='ionicons.min.css'>
 	   <link href='leaflet.awesome-markers.css'>
-	   <script crs='leaflet.awesome-markers.js'></script>
+	   <script src='leaflet.awesome-markers.js'></script>
 <head>
 
 #to write the body here 
