--- a/new3.html
+++ b/new3.html
@@ -39,7 +39,7 @@
 	   id:'mapbox.streets'
 	   }).addTo(mymap);
 	   
-	   var testMarkerPink = L.AwesomeMarkers.Icon({
+	   var testMarkerPink = L.AwesomeMarkers.icon({
        icon: 'play',
        markerColor: 'pink'
        });
