--- a/getLocation.html
+++ b/getLocation.html
@@ -1,10 +1,18 @@
 <html>
 <head>
 <title>Test HTML Location Functionality</title>
+<script>
+function getLocation(){alert('getting location');
+navigator.geolocation.getCurrentPosition(getPosition);}
+function getPosition(position){
+document.getElementById('showLocation').innerHTML='Latitude:'+position.coords.latitude+
+'<br>Longitude:'+position.coords.longitude;}
+</script>
 </head>
 <body>
 <b>This code will display your current location</b>
 <div id='showLocation'>Location will be displayed here</div>
+<button id='getLocation' onclick='getLocation()'>Click here to get your location</button>
 </body>
 </html>
 
