--- a/busstops1.html
+++ b/busstops1.html
@@ -77,7 +77,7 @@
 	   function loadLayer(geoJSONData){
 	   // which layer will be loaded?
 	   if (geoJSONData.indexOf('earthquake')>0){var loadingEarthquakes=true;}
-	   if (geoJSONData.indexOf('IIT_METHOD')>0){var loadingBusstops=true;}
+	   if (geoJSONData.indexOf('IIT_METHOD')>0){var loadingBusstops=true;}}
 	   
 	   //convert the text to JSON
 	   var json=JSON.parse(geoJSONData);
